@@ -1,11 +1,12 @@
 @file:Suppress("UnstableApiUsage")
 
 import org.asciidoctor.gradle.jvm.AsciidoctorTask
+import org.orkg.gradle.withSnippets
 import org.springframework.boot.gradle.tasks.bundling.BootJar
 import org.springframework.boot.gradle.tasks.run.BootRun
 
 group = "eu.tib"
-version = "0.30.3"
+version = "0.37.0"
 
 val neo4jVersion = "3.5.+" // should match version in Dockerfile
 val springDataNeo4jVersion = "5.3.4"
@@ -28,8 +29,8 @@ plugins {
     alias(libs.plugins.spring.boot)
 
     id("org.jetbrains.dokka") version "0.10.1"
-    id("de.jansauer.printcoverage") version "2.0.0"
     id("org.asciidoctor.jvm.convert") version "3.3.2"
+    id("org.asciidoctor.jvm.gems") version "3.3.2"
     id("com.google.cloud.tools.jib") version "3.1.1"
     // The taskinfo plugin currently does not work with Gradle 7.6: https://gitlab.com/barfuin/gradle-taskinfo/-/issues/20
     // It was used only occasionally for debugging, and can be re-enabled again later (if needed).
@@ -43,10 +44,12 @@ allOpen {
     annotation("javax.persistence.Embeddable")
 }
 
-configurations {
-    // The Asciidoctor Gradle plug-in does not create it anymore, so we have to...
-    create("asciidoctor")
+val restdocs by configurations.creating {
+    isCanBeConsumed = false
+    isCanBeResolved = true
 }
+
+val asciidoctor by configurations.creating
 
 idea {
     module {
@@ -60,7 +63,7 @@ testing {
             useJUnitJupiter()
             dependencies {
                 implementation(testFixtures(project(":testing:spring")))
-                implementation(testFixtures(project(":graph:application")))
+                implementation(testFixtures(project(":graph:graph-application")))
                 implementation("org.springframework.security:spring-security-test")
                 implementation("org.springframework.restdocs:spring-restdocs-mockmvc")
                 implementation("org.springframework.boot:spring-boot-starter-test") {
@@ -70,8 +73,7 @@ testing {
                     // TODO: We currently have a mixture of MockK and Mockito tests. After migration, we should disable Mockito.
                     // exclude(module = "mockito-core")
                 }
-                implementation("com.ninja-squad:springmockk:2.0.1")
-                implementation("com.redfin:contractual:3.0.0")
+                implementation(libs.spring.mockk)
             }
         }
         val integrationTest by registering(JvmTestSuite::class) {
@@ -80,7 +82,12 @@ testing {
             dependencies {
                 implementation(project())
                 implementation(testFixtures(project(":testing:spring")))
-                implementation(testFixtures(project(":graph:application")))
+                implementation(testFixtures(project(":graph:graph-application")))
+                implementation(project(":identity-management:idm-application"))
+                implementation(project(":identity-management:idm-adapter-output-spring-data-jpa")) // for JpaUserAdapter
+                implementation(project(":discussions:discussions-adapter-output-spring-data-jpa-postgres"))
+                implementation(project(":media-storage:media-storage-adapter-output-spring-data-jpa-postgres"))
+                implementation(project(":feature-flags:feature-flags-ports"))
                 implementation("org.springframework.security:spring-security-test")
                 implementation("org.springframework.restdocs:spring-restdocs-mockmvc")
                 implementation("org.springframework.boot:spring-boot-starter-test") {
@@ -90,10 +97,10 @@ testing {
                     // TODO: We currently have a mixture of MockK and Mockito tests. After migration, we should disable Mockito.
                     // exclude(module = "mockito-core")
                 }
-                implementation("com.ninja-squad:springmockk:2.0.1")
-                implementation("com.redfin:contractual:3.0.0")
+                implementation(libs.spring.mockk)
                 implementation("org.springframework.boot:spring-boot-starter-data-jpa")
                 implementation("org.postgresql:postgresql")
+                implementation("org.springframework.boot:spring-boot-starter-data-neo4j")
             }
             targets {
                 all {
@@ -127,14 +134,24 @@ dependencies {
     // Upgrade for security reasons. Can be removed after Spring upgrade.
     implementation(platform("org.apache.logging.log4j:log4j-bom:2.19.0"))
 
-    // This is supposed to go away at some point:
-    implementation(project(":library"))
     // This project is essentially a "configuration" project in Spring's sense, so we depend on all components:
-    implementation(project(":identity-management:application"))
-    implementation(project(":identity-management:adapter-output-spring-data-jpa"))
-    implementation(project(":graph:application"))
-    implementation(project(":graph:adapter-input-rest-spring-mvc"))
-    implementation(project(":graph:adapter-output-spring-data-neo4j-ogm"))
+    implementation(project(":common:exceptions"))
+    compileOnly(project(":identity-management:idm-application")) // only ports used, replace later
+    runtimeOnly(project(":identity-management:idm-adapter-input-rest-spring-security"))
+    runtimeOnly(project(":identity-management:idm-adapter-output-spring-data-jpa"))
+    implementation(project(":graph:graph-application"))
+    implementation(project(":graph:graph-adapter-input-rest-spring-mvc"))
+    implementation(project(":graph:graph-adapter-output-spring-data-neo4j-ogm"))
+    implementation(project(":discussions:discussions-adapter-output-spring-data-jpa-postgres"))
+    implementation(project(":media-storage:media-storage-adapter-output-spring-data-jpa-postgres"))
+    implementation(project(":feature-flags:feature-flags-ports"))
+    implementation(project(":feature-flags:feature-flags-adapter-output-spring-properties"))
+    implementation(project(":rdf-export:rdf-export-application"))
+    implementation(project(":rdf-export:rdf-export-adapter-input-rest-spring-mvc"))
+    implementation(project(":licenses:licenses-application"))
+    implementation(project(":licenses:licenses-adapter-input-rest-spring-mvc"))
+    implementation(project(":licenses:licenses-adapter-output-spring"))
+    implementation(project(":widget"))
 
     implementation(libs.forkhandles.result4k)
     implementation(libs.forkhandles.values4k)
@@ -160,6 +177,8 @@ dependencies {
     // JAXB stuff. Was removed from Java 9. Seems to be needed for OAuth2.
     implementation(libs.bundles.jaxb)
     implementation(libs.annotations.jsr305) // provides @Nullable and other JSR305 annotations
+    // File uploads
+    implementation("commons-fileupload:commons-fileupload:1.5")
     // RDF
     implementation("org.eclipse.rdf4j:rdf4j-client:3.7.7") {
         exclude(group = "commons-collections", module = "commons-collections") // Version 3, vulnerable
@@ -171,6 +190,8 @@ dependencies {
     implementation("com.github.ben-manes.caffeine:caffeine")
     implementation("org.springframework.boot:spring-boot-starter-cache")
     implementation("io.github.stepio.coffee-boots:coffee-boots:3.0.0")
+    // Data Faker
+    implementation("net.datafaker:datafaker:1.7.0")
     // Monitoring
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.jolokia:jolokia-core")
@@ -181,11 +202,14 @@ dependencies {
     // Note: Version Catalogs are not yet supported in the test suites plugin
     "integrationTestImplementation"(libs.bundles.testcontainers)
     "integrationTestImplementation"(libs.bundles.kotest)
-
     //
     // Documentation
     //
-    "asciidoctor"("org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.4.RELEASE")
+    asciidoctor("org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.7.RELEASE")
+    restdocs(project(withSnippets(":graph:graph-adapter-input-rest-spring-mvc")))
+    restdocs(project(withSnippets(":rdf-export:rdf-export-adapter-input-rest-spring-mvc")))
+    restdocs(project(withSnippets(":licenses:licenses-adapter-input-rest-spring-mvc")))
+    restdocs(project(withSnippets(":widget")))
 }
 
 tasks.named("check") {
@@ -202,8 +226,6 @@ tasks {
     val check by existing {
         dependsOn(named<JacocoReport>("testCodeCoverageReport"))
     }
-    val printCoverage by existing { mustRunAfter(check) }
-    val build by existing { dependsOn(printCoverage) }
 
     withType<Test>().configureEach {
         useJUnitPlatform {
@@ -227,6 +249,17 @@ tasks {
         finalizedBy("bootRun")
     }
 
+    register("runListMigrations").configure {
+        group = "migration"
+        description = "Migrates the current database to use list entities."
+        doFirst {
+            named<BootRun>("bootRun").configure {
+                args("--spring.profiles.active=development,listMigrations")
+            }
+        }
+        finalizedBy("bootRun")
+    }
+
     named("dokka", org.jetbrains.dokka.gradle.DokkaTask::class).configure {
         outputFormat = "html"
         configuration {
@@ -240,17 +273,60 @@ tasks {
         }
     }
 
+    val generatedSnippets = fileTree(layout.buildDirectory.dir("generated-snippets")) {
+        include("**/*.adoc")
+        builtBy(integrationTest)
+    }
+
+    val aggregatedSnippetsDir = layout.buildDirectory.dir("restdocs-snippets")
+
+    val aggregateRestDocsSnippets by registering(Copy::class) {
+        group = "documentation"
+
+        // Explicitly add a dependency on the configuration, because it will not resolve otherwise.
+        dependsOn(restdocs)
+
+        // Obtain the list of ZIP files (and extract them). This only works if the configuration was resolved.
+        restdocs.files.forEach {
+            from(zipTree(it)) {
+                include("**/*.adoc")
+            }
+        }
+        from(generatedSnippets)
+        into(aggregatedSnippetsDir)
+    }
+
     named("asciidoctor", AsciidoctorTask::class).configure {
         // Declare all generated Asciidoc snippets as inputs. This connects the tasks, so dependsOn() is not required.
         // Other outputs are filtered, because they do not affect the output of this task.
-        inputs.files(integrationTest.get().outputs.files.asFileTree.matching { include("**/*.adoc") })
+        val docSources = files(sourceDir).asFileTree.matching { include("**/*.adoc") }
+        inputs.files(docSources, aggregateRestDocsSnippets)
             .withPathSensitivity(PathSensitivity.RELATIVE)
             .ignoreEmptyDirectories()
-            .withPropertyName("restdocSnippets")
+            .withPropertyName("asciidocFiles")
 
         configurations("asciidoctor")
         // TODO: Use {includedir} in documentation, change strategy afterwards
         baseDirFollowsSourceFile()
+
+        asciidoctorj {
+            modules {
+                diagram.use()
+                diagram.version("2.2.10")
+            }
+            fatalWarnings(missingIncludes())
+
+            // Work-around for JRE 16+, because Java's internal APIs are no longer available due to JPMS.
+            // This should be fixed in the Asciidoctor plugin, but never was.
+            inProcess = org.asciidoctor.gradle.base.process.ProcessMode.JAVA_EXEC
+            forkOptions {
+                jvmArgs(
+                    "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+                    "--add-opens", "java.base/java.io=ALL-UNNAMED",
+                    "--add-opens", "java.base/java.security=ALL-UNNAMED",
+                )
+            }
+        }
 
         // outputs.upToDateWhen { false }
         outputOptions {
@@ -266,7 +342,8 @@ tasks {
                 "toc" to "left",
                 "icons" to "font",
                 "linkattrs" to "true",
-                "encoding" to "utf-8"
+                "encoding" to "utf-8",
+                "snippets" to aggregatedSnippetsDir,
             )
         )
 
@@ -305,16 +382,21 @@ spotless {
     }
 }
 
-asciidoctorj {
-    modules {
-        diagram.use()
-    }
-}
-
 kapt {
     // Turn off the discovery of annotation processors in the compile classpath. This means that all annotation
     // processors need to be listed manually.
     // The problem seems to be that the Neo4j annotation processor leaks into the classpath.
     // TODO: Check if classpath leakage is fixed in later versions.
     includeCompileClasspath = false
+}
+
+springBoot {
+    buildInfo()
+}
+
+normalization {
+    runtimeClasspath {
+        // This only affects build cache key calculation. The file will be included in the build.
+        ignore("**/build-info.properties")
+    }
 }
